syntax = "proto3";

package api;

service GritApi {

  // txn management
  rpc OpenTransaction(OpenRequest) returns (Transaction);
  rpc Commit(Transaction) returns (TransactionResponse);
  rpc Rollback(Transaction) returns (TransactionResponse);

  // write operations
  rpc AddVertex(AddVertexRequest) returns (TransactionResponse);
  rpc RemoveVertex(RemoveVertexRequest) returns (TransactionResponse);
  rpc AddLabel(AddLabelRequest) returns (TransactionResponse);
  rpc RemoveLabel(RemoveLabelRequest) returns (TransactionResponse);
  rpc AddEdge(AddEdgeRequest) returns (TransactionResponse);
  rpc RemoveEdge(RemoveEdgeRequest) returns (TransactionResponse);

  // read operations
  rpc GetLabels(GetLabelsRequest) returns (stream Label);
  rpc GetEdges(GetEdgesRequest) returns (stream Edge);
  rpc GetEdgesByLabel(GetEdgesByLabelRequest) returns (stream Edge);
  rpc GetVerticesByType(GetVerticesByTypeRequest) returns (stream VertexId);
  rpc GetVerticesByLabel(GetVerticesByLabelRequest) returns (stream VertexId);
}

enum TransactionStatus {
  OK = 0;
  IS_READONLY = 1;
  CONFLICT = 2;
  INVALIDATED = 3;
  NOT_IN_PROGRESS = 4;
}

message TransactionResponse {
  TransactionStatus status = 1;
}

enum TransactionType {
  READ = 0;
  WRITE = 1;
}

message OpenRequest {
  TransactionType type = 1;
  uint64 txId = 2;
}

message Transaction {
  TransactionType type = 1;
  uint64 txId = 2;
}

message VertexId {
  string type = 1;
  uint64 id = 2;
}

message AddVertexRequest {
  uint64 txId = 1;
  VertexId vertexId = 2;
}

message RemoveVertexRequest {
  uint64 txId = 1;
  VertexId vertexId = 2;
}

message AddLabelRequest {
  uint64 txId = 1;
  VertexId vertexId = 2;
  string label = 3;
}

message RemoveLabelRequest {
  uint64 txId = 1;
  VertexId vertexId = 2;
  string label = 3;
}

message AddEdgeRequest {
  uint64 txId = 1;
  string label = 2;
  VertexId fromVertexId = 3;
  VertexId toVertexId = 4;
}

message RemoveEdgeRequest {
  uint64 txId = 1;
  string label = 2;
  VertexId fromVertexId = 3;
  VertexId toVertexId = 4;
}

enum EdgeDirection {
  IN = 0;
  OUT = 1;
}

message Edge {
  VertexId vertexId = 1;
  VertexId otherId = 2;
  string label = 3;
  EdgeDirection direction = 4;
}

message Label {
  string label = 1;
}

message GetVerticesByTypeRequest {
  uint64 txId = 1;
  string type = 2;
}

message GetVerticesByLabelRequest {
  uint64 txId = 1;
  string type = 2;
  repeated string labels = 3;
}

message GetLabelsRequest {
  uint64 txId = 1;
  VertexId vertexId = 2;
}

message GetEdgesRequest {
  uint64 txId = 1;
  repeated VertexId vertices = 2;
}

message GetEdgesByLabelRequest {
  uint64 txId = 1;
  string label = 2;
  EdgeDirection direction = 3;
  repeated VertexId vertices = 4;
}

// internal, but uses same messages as api
message RaftLogEntry {
  oneof operation {
    OpenRequest open = 1;
    Transaction commit = 2;
    Transaction rollback = 3;

    AddVertexRequest addVertex = 4;
    RemoveVertexRequest removeVertex = 5;
    AddLabelRequest addLabel = 6;
    RemoveLabelRequest removeLabel = 7;
    AddEdgeRequest addEdge = 8;
    RemoveEdgeRequest removeEdge = 9;
  }
}